# global-workflow

./: .gitignore  .shellcheckrc  CMakeLists.txt
.github/scripts/: apply_shellcheck.sh
ci/cases/pr/: C48mx500_3DVarAOWCDA.yaml
env/: HERA.env  WCOSS2.env
jobs/: JGLOBAL_FORECAST
jobs/rocoto/: fcst.sh
modulefiles/: gw_hera.intel.lua  module_base.orion.lua
parm/config/: config.base.emc.dyn  config.fcst  config.fv3  config.ocn  config.resources
parm/config/gfs/: config.prepoceanobs
parm/config/gfs/yaml/: defaults.yaml
parm/modules/: wcoss2.csv
parm/parm_fv3diag/: diag_table_atm  diag_table_header  diag_table_ocn
parm/ufs/: control_p8.yaml  fv3_input_nml.yaml  ufs_config.yaml
parm/ufs/gocart/: AERO_HISTORY.rc.IN
scripts/: exglobal_forecast.py  exglobal_forecast.sh
sorc/: CMakeLists.txt  build_ufs.sh  gw_build.sh  link_workflow.sh
ush/: bash_utils.sh  create_modules.py  forecast_postdet.sh  forecast_predet.sh  load_fv3gfs_modules.sh  parsing_model_configure_FV3.sh  parsing_namelists_CICE.sh  parsing_namelists_MOM6.sh  parsing_ufs_configure.sh
ush/python/pygfs/: cpl_validate.yaml  model_configure.yaml  runtime.py  ufswm.py
ush/python/pygfs/task/: forecast.py  gfs_forecast.py  land_analysis.py
ush/python/pygfs/ufswm/: gfs.py  ufs.py
ush/python/pygw/: README.md  requirements.txt  setup.cfg
ush/python/pygw/src/pygw/: configuration.py  hpss.py  logger.py  task.py  template.py
